remove node_modules from repository

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/reason-of-appeal.css">
     <link rel="stylesheet" href="styles/customer-reviews.css">
     <link rel="stylesheet" href="styles/slider-customer-reviews.css">
-    <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/slider-team.css">
     <link rel="stylesheet" href="styles/reason-of-call.css">
     <link rel="stylesheet" href="styles/style-footer.css">
@@ -951,7 +951,7 @@
     <script src="scripts/text_modification.js"></script>
     <script src="scripts/slider-customer-reviews.js" type="module"></script>
     <script src="scripts/slider-team.js" type="module"></script>
-    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="swiper/swiper-bundle.min.js"></script>
     <script src="scripts/form-call-a-master-modal.js"></script>
     <script src="scripts/form-get-a-consultation-modal.js"></script>
     <script src="scripts/menu-modal.js"></script>
